[package]
authors = ["Paavo Huhtala <paavo.huhtala@gmail.com>"]
edition = "2018"
name = "robotini-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
opencv = {version = "0.49.1", default-features = false, features = ["opencv-4", "buildtime-bindgen"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
